satyrus/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> code
Rule 2     code -> code stmt
Rule 3     code -> stmt
Rule 4     stmt -> sys_config ENDL
Rule 5     stmt -> def_const ENDL
Rule 6     stmt -> def_array ENDL
Rule 7     stmt -> def_restr ENDL
Rule 8     sys_config -> SHARP NAME DOTS NUMBER
Rule 9     sys_config -> SHARP NAME DOTS STRING
Rule 10    def_const -> NAME ASSIGN literal
Rule 11    literal -> NUMBER
Rule 12    literal -> NAME
Rule 13    def_array -> NAME shape ASSIGN array_buffer
Rule 14    def_array -> NAME shape
Rule 15    shape -> shape index
Rule 16    shape -> index
Rule 17    index -> LBRA literal RBRA
Rule 18    array_buffer -> LCUR array RCUR
Rule 19    array -> array COMMA array_item
Rule 20    array -> array_item
Rule 21    array_item -> array_index DOTS literal
Rule 22    array_index -> LPAR literal_seq RPAR
Rule 23    literal_seq -> literal_seq COMMA literal
Rule 24    literal_seq -> literal
Rule 25    def_restr -> LPAR NAME RPAR NAME LBRA literal RBRA DOTS loops expr
Rule 26    def_restr -> LPAR NAME RPAR NAME DOTS loops expr
Rule 27    loops -> loops loop
Rule 28    loops -> loop
Rule 29    loop -> quant LCUR NAME ASSIGN domain COMMA conditions RCUR
Rule 30    loop -> quant LCUR NAME ASSIGN domain RCUR
Rule 31    quant -> FORALL
Rule 32    quant -> EXISTS
Rule 33    quant -> EXISTS_ONE
Rule 34    domain -> LBRA literal DOTS literal DOTS literal RBRA
Rule 35    domain -> LBRA literal DOTS literal RBRA
Rule 36    conditions -> conditions COMMA condition
Rule 37    conditions -> condition
Rule 38    condition -> expr EQ expr
Rule 39    condition -> expr GT expr
Rule 40    condition -> expr LT expr
Rule 41    condition -> expr GE expr
Rule 42    condition -> expr LE expr
Rule 43    condition -> expr NE expr
Rule 44    condition -> expr
Rule 45    expr -> literal
Rule 46    expr -> NOT expr
Rule 47    expr -> ADD expr
Rule 48    expr -> SUB expr
Rule 49    expr -> expr AND expr
Rule 50    expr -> expr OR expr
Rule 51    expr -> expr XOR expr
Rule 52    expr -> expr ADD expr
Rule 53    expr -> expr SUB expr
Rule 54    expr -> expr MUL expr
Rule 55    expr -> expr DIV expr
Rule 56    expr -> expr IMP expr
Rule 57    expr -> expr RIMP expr
Rule 58    expr -> expr IFF expr
Rule 59    expr -> expr LBRA expr RBRA
Rule 60    expr -> LPAR expr RPAR

Terminals, with rules where they appear

ADD                  : 47 52
AND                  : 49
ASSIGN               : 10 13 29 30
COMMA                : 19 23 29 36
DIV                  : 55
DOTS                 : 8 9 21 25 26 34 34 35
ENDL                 : 4 5 6 7
EQ                   : 38
EXISTS               : 32
EXISTS_ONE           : 33
FORALL               : 31
GE                   : 41
GT                   : 39
IFF                  : 58
IMP                  : 56
LBRA                 : 17 25 34 35 59
LCUR                 : 18 29 30
LE                   : 42
LPAR                 : 22 25 26 60
LT                   : 40
MUL                  : 54
NAME                 : 8 9 10 12 13 14 25 25 26 26 29 30
NE                   : 43
NOT                  : 46
NUMBER               : 8 11
OR                   : 50
RBRA                 : 17 25 34 35 59
RCUR                 : 18 29 30
RIMP                 : 57
RPAR                 : 22 25 26 60
SHARP                : 8 9
STRING               : 9
SUB                  : 48 53
XOR                  : 51
error                : 

Nonterminals, with rules where they appear

array                : 18 19
array_buffer         : 13
array_index          : 21
array_item           : 19 20
code                 : 1 2
condition            : 36 37
conditions           : 29 36
def_array            : 6
def_const            : 5
def_restr            : 7
domain               : 29 30
expr                 : 25 26 38 38 39 39 40 40 41 41 42 42 43 43 44 46 47 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60
index                : 15 16
literal              : 10 17 21 23 24 25 34 34 34 35 35 45
literal_seq          : 22 23
loop                 : 27 28
loops                : 25 26 27
quant                : 29 30
shape                : 13 14 15
start                : 0
stmt                 : 2 3
sys_config           : 4

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . code
    (2) code -> . code stmt
    (3) code -> . stmt
    (4) stmt -> . sys_config ENDL
    (5) stmt -> . def_const ENDL
    (6) stmt -> . def_array ENDL
    (7) stmt -> . def_restr ENDL
    (8) sys_config -> . SHARP NAME DOTS NUMBER
    (9) sys_config -> . SHARP NAME DOTS STRING
    (10) def_const -> . NAME ASSIGN literal
    (13) def_array -> . NAME shape ASSIGN array_buffer
    (14) def_array -> . NAME shape
    (25) def_restr -> . LPAR NAME RPAR NAME LBRA literal RBRA DOTS loops expr
    (26) def_restr -> . LPAR NAME RPAR NAME DOTS loops expr

    SHARP           shift and go to state 8
    NAME            shift and go to state 9
    LPAR            shift and go to state 10

    start                          shift and go to state 1
    code                           shift and go to state 2
    stmt                           shift and go to state 3
    sys_config                     shift and go to state 4
    def_const                      shift and go to state 5
    def_array                      shift and go to state 6
    def_restr                      shift and go to state 7

state 1

    (0) S' -> start .



state 2

    (1) start -> code .
    (2) code -> code . stmt
    (4) stmt -> . sys_config ENDL
    (5) stmt -> . def_const ENDL
    (6) stmt -> . def_array ENDL
    (7) stmt -> . def_restr ENDL
    (8) sys_config -> . SHARP NAME DOTS NUMBER
    (9) sys_config -> . SHARP NAME DOTS STRING
    (10) def_const -> . NAME ASSIGN literal
    (13) def_array -> . NAME shape ASSIGN array_buffer
    (14) def_array -> . NAME shape
    (25) def_restr -> . LPAR NAME RPAR NAME LBRA literal RBRA DOTS loops expr
    (26) def_restr -> . LPAR NAME RPAR NAME DOTS loops expr

    $end            reduce using rule 1 (start -> code .)
    SHARP           shift and go to state 8
    NAME            shift and go to state 9
    LPAR            shift and go to state 10

    stmt                           shift and go to state 11
    sys_config                     shift and go to state 4
    def_const                      shift and go to state 5
    def_array                      shift and go to state 6
    def_restr                      shift and go to state 7

state 3

    (3) code -> stmt .

    SHARP           reduce using rule 3 (code -> stmt .)
    NAME            reduce using rule 3 (code -> stmt .)
    LPAR            reduce using rule 3 (code -> stmt .)
    $end            reduce using rule 3 (code -> stmt .)


state 4

    (4) stmt -> sys_config . ENDL

    ENDL            shift and go to state 12


state 5

    (5) stmt -> def_const . ENDL

    ENDL            shift and go to state 13


state 6

    (6) stmt -> def_array . ENDL

    ENDL            shift and go to state 14


state 7

    (7) stmt -> def_restr . ENDL

    ENDL            shift and go to state 15


state 8

    (8) sys_config -> SHARP . NAME DOTS NUMBER
    (9) sys_config -> SHARP . NAME DOTS STRING

    NAME            shift and go to state 16


state 9

    (10) def_const -> NAME . ASSIGN literal
    (13) def_array -> NAME . shape ASSIGN array_buffer
    (14) def_array -> NAME . shape
    (15) shape -> . shape index
    (16) shape -> . index
    (17) index -> . LBRA literal RBRA

    ASSIGN          shift and go to state 17
    LBRA            shift and go to state 20

    shape                          shift and go to state 18
    index                          shift and go to state 19

state 10

    (25) def_restr -> LPAR . NAME RPAR NAME LBRA literal RBRA DOTS loops expr
    (26) def_restr -> LPAR . NAME RPAR NAME DOTS loops expr

    NAME            shift and go to state 21


state 11

    (2) code -> code stmt .

    SHARP           reduce using rule 2 (code -> code stmt .)
    NAME            reduce using rule 2 (code -> code stmt .)
    LPAR            reduce using rule 2 (code -> code stmt .)
    $end            reduce using rule 2 (code -> code stmt .)


state 12

    (4) stmt -> sys_config ENDL .

    SHARP           reduce using rule 4 (stmt -> sys_config ENDL .)
    NAME            reduce using rule 4 (stmt -> sys_config ENDL .)
    LPAR            reduce using rule 4 (stmt -> sys_config ENDL .)
    $end            reduce using rule 4 (stmt -> sys_config ENDL .)


state 13

    (5) stmt -> def_const ENDL .

    SHARP           reduce using rule 5 (stmt -> def_const ENDL .)
    NAME            reduce using rule 5 (stmt -> def_const ENDL .)
    LPAR            reduce using rule 5 (stmt -> def_const ENDL .)
    $end            reduce using rule 5 (stmt -> def_const ENDL .)


state 14

    (6) stmt -> def_array ENDL .

    SHARP           reduce using rule 6 (stmt -> def_array ENDL .)
    NAME            reduce using rule 6 (stmt -> def_array ENDL .)
    LPAR            reduce using rule 6 (stmt -> def_array ENDL .)
    $end            reduce using rule 6 (stmt -> def_array ENDL .)


state 15

    (7) stmt -> def_restr ENDL .

    SHARP           reduce using rule 7 (stmt -> def_restr ENDL .)
    NAME            reduce using rule 7 (stmt -> def_restr ENDL .)
    LPAR            reduce using rule 7 (stmt -> def_restr ENDL .)
    $end            reduce using rule 7 (stmt -> def_restr ENDL .)


state 16

    (8) sys_config -> SHARP NAME . DOTS NUMBER
    (9) sys_config -> SHARP NAME . DOTS STRING

    DOTS            shift and go to state 22


state 17

    (10) def_const -> NAME ASSIGN . literal
    (11) literal -> . NUMBER
    (12) literal -> . NAME

    NUMBER          shift and go to state 25
    NAME            shift and go to state 23

    literal                        shift and go to state 24

state 18

    (13) def_array -> NAME shape . ASSIGN array_buffer
    (14) def_array -> NAME shape .
    (15) shape -> shape . index
    (17) index -> . LBRA literal RBRA

    ASSIGN          shift and go to state 26
    ENDL            reduce using rule 14 (def_array -> NAME shape .)
    LBRA            shift and go to state 20

    index                          shift and go to state 27

state 19

    (16) shape -> index .

    ASSIGN          reduce using rule 16 (shape -> index .)
    LBRA            reduce using rule 16 (shape -> index .)
    ENDL            reduce using rule 16 (shape -> index .)


state 20

    (17) index -> LBRA . literal RBRA
    (11) literal -> . NUMBER
    (12) literal -> . NAME

    NUMBER          shift and go to state 25
    NAME            shift and go to state 23

    literal                        shift and go to state 28

state 21

    (25) def_restr -> LPAR NAME . RPAR NAME LBRA literal RBRA DOTS loops expr
    (26) def_restr -> LPAR NAME . RPAR NAME DOTS loops expr

    RPAR            shift and go to state 29


state 22

    (8) sys_config -> SHARP NAME DOTS . NUMBER
    (9) sys_config -> SHARP NAME DOTS . STRING

    NUMBER          shift and go to state 30
    STRING          shift and go to state 31


state 23

    (12) literal -> NAME .

    ENDL            reduce using rule 12 (literal -> NAME .)
    RBRA            reduce using rule 12 (literal -> NAME .)
    RPAR            reduce using rule 12 (literal -> NAME .)
    COMMA           reduce using rule 12 (literal -> NAME .)
    RCUR            reduce using rule 12 (literal -> NAME .)
    AND             reduce using rule 12 (literal -> NAME .)
    OR              reduce using rule 12 (literal -> NAME .)
    XOR             reduce using rule 12 (literal -> NAME .)
    ADD             reduce using rule 12 (literal -> NAME .)
    SUB             reduce using rule 12 (literal -> NAME .)
    MUL             reduce using rule 12 (literal -> NAME .)
    DIV             reduce using rule 12 (literal -> NAME .)
    IMP             reduce using rule 12 (literal -> NAME .)
    RIMP            reduce using rule 12 (literal -> NAME .)
    IFF             reduce using rule 12 (literal -> NAME .)
    LBRA            reduce using rule 12 (literal -> NAME .)
    EQ              reduce using rule 12 (literal -> NAME .)
    GT              reduce using rule 12 (literal -> NAME .)
    LT              reduce using rule 12 (literal -> NAME .)
    GE              reduce using rule 12 (literal -> NAME .)
    LE              reduce using rule 12 (literal -> NAME .)
    NE              reduce using rule 12 (literal -> NAME .)
    DOTS            reduce using rule 12 (literal -> NAME .)


state 24

    (10) def_const -> NAME ASSIGN literal .

    ENDL            reduce using rule 10 (def_const -> NAME ASSIGN literal .)


state 25

    (11) literal -> NUMBER .

    ENDL            reduce using rule 11 (literal -> NUMBER .)
    RBRA            reduce using rule 11 (literal -> NUMBER .)
    RPAR            reduce using rule 11 (literal -> NUMBER .)
    COMMA           reduce using rule 11 (literal -> NUMBER .)
    RCUR            reduce using rule 11 (literal -> NUMBER .)
    AND             reduce using rule 11 (literal -> NUMBER .)
    OR              reduce using rule 11 (literal -> NUMBER .)
    XOR             reduce using rule 11 (literal -> NUMBER .)
    ADD             reduce using rule 11 (literal -> NUMBER .)
    SUB             reduce using rule 11 (literal -> NUMBER .)
    MUL             reduce using rule 11 (literal -> NUMBER .)
    DIV             reduce using rule 11 (literal -> NUMBER .)
    IMP             reduce using rule 11 (literal -> NUMBER .)
    RIMP            reduce using rule 11 (literal -> NUMBER .)
    IFF             reduce using rule 11 (literal -> NUMBER .)
    LBRA            reduce using rule 11 (literal -> NUMBER .)
    EQ              reduce using rule 11 (literal -> NUMBER .)
    GT              reduce using rule 11 (literal -> NUMBER .)
    LT              reduce using rule 11 (literal -> NUMBER .)
    GE              reduce using rule 11 (literal -> NUMBER .)
    LE              reduce using rule 11 (literal -> NUMBER .)
    NE              reduce using rule 11 (literal -> NUMBER .)
    DOTS            reduce using rule 11 (literal -> NUMBER .)


state 26

    (13) def_array -> NAME shape ASSIGN . array_buffer
    (18) array_buffer -> . LCUR array RCUR

    LCUR            shift and go to state 33

    array_buffer                   shift and go to state 32

state 27

    (15) shape -> shape index .

    ASSIGN          reduce using rule 15 (shape -> shape index .)
    LBRA            reduce using rule 15 (shape -> shape index .)
    ENDL            reduce using rule 15 (shape -> shape index .)


state 28

    (17) index -> LBRA literal . RBRA

    RBRA            shift and go to state 34


state 29

    (25) def_restr -> LPAR NAME RPAR . NAME LBRA literal RBRA DOTS loops expr
    (26) def_restr -> LPAR NAME RPAR . NAME DOTS loops expr

    NAME            shift and go to state 35


state 30

    (8) sys_config -> SHARP NAME DOTS NUMBER .

    ENDL            reduce using rule 8 (sys_config -> SHARP NAME DOTS NUMBER .)


state 31

    (9) sys_config -> SHARP NAME DOTS STRING .

    ENDL            reduce using rule 9 (sys_config -> SHARP NAME DOTS STRING .)


state 32

    (13) def_array -> NAME shape ASSIGN array_buffer .

    ENDL            reduce using rule 13 (def_array -> NAME shape ASSIGN array_buffer .)


state 33

    (18) array_buffer -> LCUR . array RCUR
    (19) array -> . array COMMA array_item
    (20) array -> . array_item
    (21) array_item -> . array_index DOTS literal
    (22) array_index -> . LPAR literal_seq RPAR

    LPAR            shift and go to state 39

    array                          shift and go to state 36
    array_item                     shift and go to state 37
    array_index                    shift and go to state 38

state 34

    (17) index -> LBRA literal RBRA .

    ASSIGN          reduce using rule 17 (index -> LBRA literal RBRA .)
    LBRA            reduce using rule 17 (index -> LBRA literal RBRA .)
    ENDL            reduce using rule 17 (index -> LBRA literal RBRA .)


state 35

    (25) def_restr -> LPAR NAME RPAR NAME . LBRA literal RBRA DOTS loops expr
    (26) def_restr -> LPAR NAME RPAR NAME . DOTS loops expr

    LBRA            shift and go to state 40
    DOTS            shift and go to state 41


state 36

    (18) array_buffer -> LCUR array . RCUR
    (19) array -> array . COMMA array_item

    RCUR            shift and go to state 42
    COMMA           shift and go to state 43


state 37

    (20) array -> array_item .

    RCUR            reduce using rule 20 (array -> array_item .)
    COMMA           reduce using rule 20 (array -> array_item .)


state 38

    (21) array_item -> array_index . DOTS literal

    DOTS            shift and go to state 44


state 39

    (22) array_index -> LPAR . literal_seq RPAR
    (23) literal_seq -> . literal_seq COMMA literal
    (24) literal_seq -> . literal
    (11) literal -> . NUMBER
    (12) literal -> . NAME

    NUMBER          shift and go to state 25
    NAME            shift and go to state 23

    literal_seq                    shift and go to state 45
    literal                        shift and go to state 46

state 40

    (25) def_restr -> LPAR NAME RPAR NAME LBRA . literal RBRA DOTS loops expr
    (11) literal -> . NUMBER
    (12) literal -> . NAME

    NUMBER          shift and go to state 25
    NAME            shift and go to state 23

    literal                        shift and go to state 47

state 41

    (26) def_restr -> LPAR NAME RPAR NAME DOTS . loops expr
    (27) loops -> . loops loop
    (28) loops -> . loop
    (29) loop -> . quant LCUR NAME ASSIGN domain COMMA conditions RCUR
    (30) loop -> . quant LCUR NAME ASSIGN domain RCUR
    (31) quant -> . FORALL
    (32) quant -> . EXISTS
    (33) quant -> . EXISTS_ONE

    FORALL          shift and go to state 51
    EXISTS          shift and go to state 52
    EXISTS_ONE      shift and go to state 53

    loops                          shift and go to state 48
    loop                           shift and go to state 49
    quant                          shift and go to state 50

state 42

    (18) array_buffer -> LCUR array RCUR .

    ENDL            reduce using rule 18 (array_buffer -> LCUR array RCUR .)


state 43

    (19) array -> array COMMA . array_item
    (21) array_item -> . array_index DOTS literal
    (22) array_index -> . LPAR literal_seq RPAR

    LPAR            shift and go to state 39

    array_item                     shift and go to state 54
    array_index                    shift and go to state 38

state 44

    (21) array_item -> array_index DOTS . literal
    (11) literal -> . NUMBER
    (12) literal -> . NAME

    NUMBER          shift and go to state 25
    NAME            shift and go to state 23

    literal                        shift and go to state 55

state 45

    (22) array_index -> LPAR literal_seq . RPAR
    (23) literal_seq -> literal_seq . COMMA literal

    RPAR            shift and go to state 56
    COMMA           shift and go to state 57


state 46

    (24) literal_seq -> literal .

    RPAR            reduce using rule 24 (literal_seq -> literal .)
    COMMA           reduce using rule 24 (literal_seq -> literal .)


state 47

    (25) def_restr -> LPAR NAME RPAR NAME LBRA literal . RBRA DOTS loops expr

    RBRA            shift and go to state 58


state 48

    (26) def_restr -> LPAR NAME RPAR NAME DOTS loops . expr
    (27) loops -> loops . loop
    (45) expr -> . literal
    (46) expr -> . NOT expr
    (47) expr -> . ADD expr
    (48) expr -> . SUB expr
    (49) expr -> . expr AND expr
    (50) expr -> . expr OR expr
    (51) expr -> . expr XOR expr
    (52) expr -> . expr ADD expr
    (53) expr -> . expr SUB expr
    (54) expr -> . expr MUL expr
    (55) expr -> . expr DIV expr
    (56) expr -> . expr IMP expr
    (57) expr -> . expr RIMP expr
    (58) expr -> . expr IFF expr
    (59) expr -> . expr LBRA expr RBRA
    (60) expr -> . LPAR expr RPAR
    (29) loop -> . quant LCUR NAME ASSIGN domain COMMA conditions RCUR
    (30) loop -> . quant LCUR NAME ASSIGN domain RCUR
    (11) literal -> . NUMBER
    (12) literal -> . NAME
    (31) quant -> . FORALL
    (32) quant -> . EXISTS
    (33) quant -> . EXISTS_ONE

    NOT             shift and go to state 63
    ADD             shift and go to state 64
    SUB             shift and go to state 65
    LPAR            shift and go to state 59
    NUMBER          shift and go to state 25
    NAME            shift and go to state 23
    FORALL          shift and go to state 51
    EXISTS          shift and go to state 52
    EXISTS_ONE      shift and go to state 53

    expr                           shift and go to state 60
    loop                           shift and go to state 61
    literal                        shift and go to state 62
    quant                          shift and go to state 50

state 49

    (28) loops -> loop .

    NOT             reduce using rule 28 (loops -> loop .)
    ADD             reduce using rule 28 (loops -> loop .)
    SUB             reduce using rule 28 (loops -> loop .)
    LPAR            reduce using rule 28 (loops -> loop .)
    NUMBER          reduce using rule 28 (loops -> loop .)
    NAME            reduce using rule 28 (loops -> loop .)
    FORALL          reduce using rule 28 (loops -> loop .)
    EXISTS          reduce using rule 28 (loops -> loop .)
    EXISTS_ONE      reduce using rule 28 (loops -> loop .)


state 50

    (29) loop -> quant . LCUR NAME ASSIGN domain COMMA conditions RCUR
    (30) loop -> quant . LCUR NAME ASSIGN domain RCUR

    LCUR            shift and go to state 66


state 51

    (31) quant -> FORALL .

    LCUR            reduce using rule 31 (quant -> FORALL .)


state 52

    (32) quant -> EXISTS .

    LCUR            reduce using rule 32 (quant -> EXISTS .)


state 53

    (33) quant -> EXISTS_ONE .

    LCUR            reduce using rule 33 (quant -> EXISTS_ONE .)


state 54

    (19) array -> array COMMA array_item .

    RCUR            reduce using rule 19 (array -> array COMMA array_item .)
    COMMA           reduce using rule 19 (array -> array COMMA array_item .)


state 55

    (21) array_item -> array_index DOTS literal .

    RCUR            reduce using rule 21 (array_item -> array_index DOTS literal .)
    COMMA           reduce using rule 21 (array_item -> array_index DOTS literal .)


state 56

    (22) array_index -> LPAR literal_seq RPAR .

    DOTS            reduce using rule 22 (array_index -> LPAR literal_seq RPAR .)


state 57

    (23) literal_seq -> literal_seq COMMA . literal
    (11) literal -> . NUMBER
    (12) literal -> . NAME

    NUMBER          shift and go to state 25
    NAME            shift and go to state 23

    literal                        shift and go to state 67

state 58

    (25) def_restr -> LPAR NAME RPAR NAME LBRA literal RBRA . DOTS loops expr

    DOTS            shift and go to state 68


state 59

    (60) expr -> LPAR . expr RPAR
    (45) expr -> . literal
    (46) expr -> . NOT expr
    (47) expr -> . ADD expr
    (48) expr -> . SUB expr
    (49) expr -> . expr AND expr
    (50) expr -> . expr OR expr
    (51) expr -> . expr XOR expr
    (52) expr -> . expr ADD expr
    (53) expr -> . expr SUB expr
    (54) expr -> . expr MUL expr
    (55) expr -> . expr DIV expr
    (56) expr -> . expr IMP expr
    (57) expr -> . expr RIMP expr
    (58) expr -> . expr IFF expr
    (59) expr -> . expr LBRA expr RBRA
    (60) expr -> . LPAR expr RPAR
    (11) literal -> . NUMBER
    (12) literal -> . NAME

    NOT             shift and go to state 63
    ADD             shift and go to state 64
    SUB             shift and go to state 65
    LPAR            shift and go to state 59
    NUMBER          shift and go to state 25
    NAME            shift and go to state 23

    expr                           shift and go to state 69
    literal                        shift and go to state 62

state 60

    (26) def_restr -> LPAR NAME RPAR NAME DOTS loops expr .
    (49) expr -> expr . AND expr
    (50) expr -> expr . OR expr
    (51) expr -> expr . XOR expr
    (52) expr -> expr . ADD expr
    (53) expr -> expr . SUB expr
    (54) expr -> expr . MUL expr
    (55) expr -> expr . DIV expr
    (56) expr -> expr . IMP expr
    (57) expr -> expr . RIMP expr
    (58) expr -> expr . IFF expr
    (59) expr -> expr . LBRA expr RBRA

    ENDL            reduce using rule 26 (def_restr -> LPAR NAME RPAR NAME DOTS loops expr .)
    AND             shift and go to state 70
    OR              shift and go to state 71
    XOR             shift and go to state 72
    ADD             shift and go to state 73
    SUB             shift and go to state 74
    MUL             shift and go to state 75
    DIV             shift and go to state 76
    IMP             shift and go to state 77
    RIMP            shift and go to state 78
    IFF             shift and go to state 79
    LBRA            shift and go to state 80


state 61

    (27) loops -> loops loop .

    NOT             reduce using rule 27 (loops -> loops loop .)
    ADD             reduce using rule 27 (loops -> loops loop .)
    SUB             reduce using rule 27 (loops -> loops loop .)
    LPAR            reduce using rule 27 (loops -> loops loop .)
    NUMBER          reduce using rule 27 (loops -> loops loop .)
    NAME            reduce using rule 27 (loops -> loops loop .)
    FORALL          reduce using rule 27 (loops -> loops loop .)
    EXISTS          reduce using rule 27 (loops -> loops loop .)
    EXISTS_ONE      reduce using rule 27 (loops -> loops loop .)


state 62

    (45) expr -> literal .

    AND             reduce using rule 45 (expr -> literal .)
    OR              reduce using rule 45 (expr -> literal .)
    XOR             reduce using rule 45 (expr -> literal .)
    ADD             reduce using rule 45 (expr -> literal .)
    SUB             reduce using rule 45 (expr -> literal .)
    MUL             reduce using rule 45 (expr -> literal .)
    DIV             reduce using rule 45 (expr -> literal .)
    IMP             reduce using rule 45 (expr -> literal .)
    RIMP            reduce using rule 45 (expr -> literal .)
    IFF             reduce using rule 45 (expr -> literal .)
    LBRA            reduce using rule 45 (expr -> literal .)
    ENDL            reduce using rule 45 (expr -> literal .)
    RPAR            reduce using rule 45 (expr -> literal .)
    RBRA            reduce using rule 45 (expr -> literal .)
    EQ              reduce using rule 45 (expr -> literal .)
    GT              reduce using rule 45 (expr -> literal .)
    LT              reduce using rule 45 (expr -> literal .)
    GE              reduce using rule 45 (expr -> literal .)
    LE              reduce using rule 45 (expr -> literal .)
    NE              reduce using rule 45 (expr -> literal .)
    RCUR            reduce using rule 45 (expr -> literal .)
    COMMA           reduce using rule 45 (expr -> literal .)


state 63

    (46) expr -> NOT . expr
    (45) expr -> . literal
    (46) expr -> . NOT expr
    (47) expr -> . ADD expr
    (48) expr -> . SUB expr
    (49) expr -> . expr AND expr
    (50) expr -> . expr OR expr
    (51) expr -> . expr XOR expr
    (52) expr -> . expr ADD expr
    (53) expr -> . expr SUB expr
    (54) expr -> . expr MUL expr
    (55) expr -> . expr DIV expr
    (56) expr -> . expr IMP expr
    (57) expr -> . expr RIMP expr
    (58) expr -> . expr IFF expr
    (59) expr -> . expr LBRA expr RBRA
    (60) expr -> . LPAR expr RPAR
    (11) literal -> . NUMBER
    (12) literal -> . NAME

    NOT             shift and go to state 63
    ADD             shift and go to state 64
    SUB             shift and go to state 65
    LPAR            shift and go to state 59
    NUMBER          shift and go to state 25
    NAME            shift and go to state 23

    expr                           shift and go to state 81
    literal                        shift and go to state 62

state 64

    (47) expr -> ADD . expr
    (45) expr -> . literal
    (46) expr -> . NOT expr
    (47) expr -> . ADD expr
    (48) expr -> . SUB expr
    (49) expr -> . expr AND expr
    (50) expr -> . expr OR expr
    (51) expr -> . expr XOR expr
    (52) expr -> . expr ADD expr
    (53) expr -> . expr SUB expr
    (54) expr -> . expr MUL expr
    (55) expr -> . expr DIV expr
    (56) expr -> . expr IMP expr
    (57) expr -> . expr RIMP expr
    (58) expr -> . expr IFF expr
    (59) expr -> . expr LBRA expr RBRA
    (60) expr -> . LPAR expr RPAR
    (11) literal -> . NUMBER
    (12) literal -> . NAME

    NOT             shift and go to state 63
    ADD             shift and go to state 64
    SUB             shift and go to state 65
    LPAR            shift and go to state 59
    NUMBER          shift and go to state 25
    NAME            shift and go to state 23

    expr                           shift and go to state 82
    literal                        shift and go to state 62

state 65

    (48) expr -> SUB . expr
    (45) expr -> . literal
    (46) expr -> . NOT expr
    (47) expr -> . ADD expr
    (48) expr -> . SUB expr
    (49) expr -> . expr AND expr
    (50) expr -> . expr OR expr
    (51) expr -> . expr XOR expr
    (52) expr -> . expr ADD expr
    (53) expr -> . expr SUB expr
    (54) expr -> . expr MUL expr
    (55) expr -> . expr DIV expr
    (56) expr -> . expr IMP expr
    (57) expr -> . expr RIMP expr
    (58) expr -> . expr IFF expr
    (59) expr -> . expr LBRA expr RBRA
    (60) expr -> . LPAR expr RPAR
    (11) literal -> . NUMBER
    (12) literal -> . NAME

    NOT             shift and go to state 63
    ADD             shift and go to state 64
    SUB             shift and go to state 65
    LPAR            shift and go to state 59
    NUMBER          shift and go to state 25
    NAME            shift and go to state 23

    expr                           shift and go to state 83
    literal                        shift and go to state 62

state 66

    (29) loop -> quant LCUR . NAME ASSIGN domain COMMA conditions RCUR
    (30) loop -> quant LCUR . NAME ASSIGN domain RCUR

    NAME            shift and go to state 84


state 67

    (23) literal_seq -> literal_seq COMMA literal .

    RPAR            reduce using rule 23 (literal_seq -> literal_seq COMMA literal .)
    COMMA           reduce using rule 23 (literal_seq -> literal_seq COMMA literal .)


state 68

    (25) def_restr -> LPAR NAME RPAR NAME LBRA literal RBRA DOTS . loops expr
    (27) loops -> . loops loop
    (28) loops -> . loop
    (29) loop -> . quant LCUR NAME ASSIGN domain COMMA conditions RCUR
    (30) loop -> . quant LCUR NAME ASSIGN domain RCUR
    (31) quant -> . FORALL
    (32) quant -> . EXISTS
    (33) quant -> . EXISTS_ONE

    FORALL          shift and go to state 51
    EXISTS          shift and go to state 52
    EXISTS_ONE      shift and go to state 53

    loops                          shift and go to state 85
    loop                           shift and go to state 49
    quant                          shift and go to state 50

state 69

    (60) expr -> LPAR expr . RPAR
    (49) expr -> expr . AND expr
    (50) expr -> expr . OR expr
    (51) expr -> expr . XOR expr
    (52) expr -> expr . ADD expr
    (53) expr -> expr . SUB expr
    (54) expr -> expr . MUL expr
    (55) expr -> expr . DIV expr
    (56) expr -> expr . IMP expr
    (57) expr -> expr . RIMP expr
    (58) expr -> expr . IFF expr
    (59) expr -> expr . LBRA expr RBRA

    RPAR            shift and go to state 86
    AND             shift and go to state 70
    OR              shift and go to state 71
    XOR             shift and go to state 72
    ADD             shift and go to state 73
    SUB             shift and go to state 74
    MUL             shift and go to state 75
    DIV             shift and go to state 76
    IMP             shift and go to state 77
    RIMP            shift and go to state 78
    IFF             shift and go to state 79
    LBRA            shift and go to state 80


state 70

    (49) expr -> expr AND . expr
    (45) expr -> . literal
    (46) expr -> . NOT expr
    (47) expr -> . ADD expr
    (48) expr -> . SUB expr
    (49) expr -> . expr AND expr
    (50) expr -> . expr OR expr
    (51) expr -> . expr XOR expr
    (52) expr -> . expr ADD expr
    (53) expr -> . expr SUB expr
    (54) expr -> . expr MUL expr
    (55) expr -> . expr DIV expr
    (56) expr -> . expr IMP expr
    (57) expr -> . expr RIMP expr
    (58) expr -> . expr IFF expr
    (59) expr -> . expr LBRA expr RBRA
    (60) expr -> . LPAR expr RPAR
    (11) literal -> . NUMBER
    (12) literal -> . NAME

    NOT             shift and go to state 63
    ADD             shift and go to state 64
    SUB             shift and go to state 65
    LPAR            shift and go to state 59
    NUMBER          shift and go to state 25
    NAME            shift and go to state 23

    expr                           shift and go to state 87
    literal                        shift and go to state 62

state 71

    (50) expr -> expr OR . expr
    (45) expr -> . literal
    (46) expr -> . NOT expr
    (47) expr -> . ADD expr
    (48) expr -> . SUB expr
    (49) expr -> . expr AND expr
    (50) expr -> . expr OR expr
    (51) expr -> . expr XOR expr
    (52) expr -> . expr ADD expr
    (53) expr -> . expr SUB expr
    (54) expr -> . expr MUL expr
    (55) expr -> . expr DIV expr
    (56) expr -> . expr IMP expr
    (57) expr -> . expr RIMP expr
    (58) expr -> . expr IFF expr
    (59) expr -> . expr LBRA expr RBRA
    (60) expr -> . LPAR expr RPAR
    (11) literal -> . NUMBER
    (12) literal -> . NAME

    NOT             shift and go to state 63
    ADD             shift and go to state 64
    SUB             shift and go to state 65
    LPAR            shift and go to state 59
    NUMBER          shift and go to state 25
    NAME            shift and go to state 23

    expr                           shift and go to state 88
    literal                        shift and go to state 62

state 72
